<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form_light_background"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@color/icons"
        android:elevation="@dimen/_10sdp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:text="More"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="vertical"

        android:layout_height="@dimen/_300sdp">
        <RelativeLayout
            android:id="@+id/accountsetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <TextView
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:text="@string/more_account"
                android:textColor="@color/icons"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_alignParentRight="true"
                android:src="@mipmap/rightarrow"
                android:layout_width="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/icons"

            />
        <RelativeLayout
            android:id="@+id/notificationsetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <TextView
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:text="@string/more_notification"
                android:textColor="@color/icons"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_alignParentRight="true"
                android:src="@mipmap/rightarrow"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/icons"

            />
        <RelativeLayout
            android:id="@+id/privacysetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <TextView
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:text="@string/more_privacy"
                android:textColor="@color/icons"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_alignParentRight="true"
                android:src="@mipmap/rightarrow"
                android:layout_width="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/icons"

            />
        <RelativeLayout
            android:id="@+id/termssetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <TextView
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:text="@string/more_terms"
                android:textColor="@color/icons"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_alignParentRight="true"
                android:src="@mipmap/rightarrow"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/icons"

            />
    </LinearLayout>


</LinearLayout>