<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form_light_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@color/icons"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/circleimage"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="gone"
            app:siBorderColor="@color/colorPrimary"
            app:siBorderWidth="4dp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtprof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/profile_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_marginTop="@dimen/_40sdp">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:id="@+id/viewbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_name"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_emailormobile"
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edittext_border"
                        android:inputType="textPersonName"
                        android:paddingLeft="@dimen/_5sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/register_rolename"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/et_role"
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"

                        android:background="@drawable/edittext_border"

                        android:textColor="@color/colorPrimaryDark">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/register_rolename"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="normal" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:src="@mipmap/downarrow" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/register_designation"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_designation"
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edittext_border"
                        android:paddingLeft="@dimen/_5sdp"
                        android:singleLine="true"

                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/register_email"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_mail"
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edittext_border"
                        android:paddingLeft="@dimen/_5sdp"
                        android:singleLine="true"

                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/register_mobile"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edittext_border"
                        android:paddingLeft="@dimen/_5sdp"
                        android:singleLine="true"

                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/register_gender"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/et_gender"
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"


                        android:background="@drawable/edittext_border"


                        android:textColor="@color/colorPrimaryDark">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/register_rolename"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="normal" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:src="@mipmap/downarrow" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/btngo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_20sdp"

                        android:text="@string/profile_changepassword"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/foot"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">


                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/cancel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="Cancel"
                                android:textColor="@color/icons"
                                android:textSize="@dimen/_14sdp"
                                android:textStyle="bold" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/icons">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="Edit"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/_14sdp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </ScrollView>


    </RelativeLayout>


</RelativeLayout>